@@ -1,8 +1,12 @@
 2024-12-29  Charlie Zender  <zender@uci.edu>
 
+	* NCO 5.3.1-alpha02 release procedure:
+	cd ~/nco;git commit -a -m 'Version 5.3.1-alpha02: Poison Enchilada';git push
+	git tag -a 5.3.1-alpha02 -m '';git push --tags
+
 	* NCO 5.3.1-alpha01 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.3.1-alpha01: Au Revoir Chloe';git push
-	git tag -a 5.3.1-alpha01 -m 'Functionally identical to 5.3.0, plus autoconversion in regridder';git push --tags
+	git tag -a 5.3.1-alpha01 -m 'Functionally identical to 5.3.0, plus autoconversion in regridder/interpolator';git push --tags
 
 	* ncks: Add autoconversion to vertical interpolation. Works single-threaded, fails multi-threaded.
 
